layout issues (#710)

--- a/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
+++ b/imixs-office-workflow-app/src/main/webapp/layout/css/office-theme.css
@@ -1305,6 +1305,7 @@ th {
 
 .imixsdatatable td {
   border: 1px solid #ddd;
+  padding: 2px 10px;
 }
 
 .imixsdatatable td.ui-state-hover {
